# FlowAutomate_Task

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6355d91da57d_initial_schema.py  a1b2c3d4e5f6_add_attachment_support.py
app/: main.py
app/api/: attachments_api.py  chats_api.py  routes.py  users_api.py  ws.py
app/core/: config.py  redis.py
app/db/: session.py
app/models/: __init__.py  attachment.py  group.py  membership.py  message.py  user.py
app/realtime/: connection_manager.py
app/schemas/: events.py
app/services/: attachment_service.py  authorization.py  gcs_service.py  membership.py  message_service.py  typing_service.py
